--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redact-secrets",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Deeply iterate over an object and redact secret values by replacing them with a predefined string",
   "main": "index.js",
   "dependencies": {
@@ -11,11 +11,13 @@
     "@types/is-secret": "^1.2.0",
     "@types/traverse": "^0.6.32",
     "clone": "^2.0.0",
-    "standard": "^8.5.0",
     "tape": "^4.6.2",
     "tsup": "^2.1.0",
     "typescript": "^3.9.7"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "node test.js"
   },
@@ -40,9 +42,5 @@
   "bugs": {
     "url": "https://github.com/watson/redact-secrets/issues"
   },
-  "homepage": "https://github.com/watson/redact-secrets#readme",
-  "coordinates": [
-    55.6810347,
-    12.5644174
-  ]
+  "homepage": "https://github.com/watson/redact-secrets#readme"
 }
