--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "redact-secrets",
   "version": "2.0.0",
   "description": "Deeply iterate over an object and redact secret values by replacing them with a predefined string",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "is-secret": "^1.0.0",
     "traverse": "^0.6.6"
